# mmwave-spi-ftdi-reader

./: LICENSE  README.md  __init__.py  example.py  pyproject.toml  radar_cube_reader.py  setup.py  spi_ftdi_frame_reader.py
data_types/: __init__.py  radar_cube.py
examples/: demo_display_rangeprofile.py  example.py
src/mmwave_spi_ftdi_reader/: __init__.py  radar_cube_reader.py  spi_ftdi_frame_reader.py
src/mmwave_spi_ftdi_reader/data_types/: __init__.py
