[project]
name = "mmwave-spi-ftdi-reader"
version = "0.1.0"
description = "An unofficial Python library for streaming and parsing 1D Radar Cube data from TI mmWave sensors via SPI using an FTDI adapter"
authors = [{name="Leon Braungardt", email="leon.braungardt@icloud.com"}]
dependencies = ["pyftdi", "numpy", "xarray"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
